objects/Registration__c.object
<CustomObject>
    <label>Registration</label>
    <nameField>
        <displayFormat>Reg-{00000}</displayFormat>
        <label>Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <validationRules>
        <fullName>MaximumAttendeesCountCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Event__r.Maximum_Attendees__c &lt;=  Event__r.Available_Seats__c</errorConditionFormula>
        <errorMessage>Maximum Attendees limit reached for the event</errorMessage>
    </validationRules>
</CustomObject>